@@ -1,5 +1,6 @@
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class 체육복 {
 
@@ -10,15 +11,15 @@ public class 체육복 {
 
     public static int solution(int n, int[] lost, int[] reserve) {
         int answer = 0;
-        List<Integer> lostList = Arrays.stream(lost).sorted().mapToObj(Integer::valueOf).toList();
-        List<Integer> reserveList = Arrays.stream(lost).sorted().mapToObj(Integer::valueOf).toList();
+        List<Integer> lostList = Arrays.stream(lost).sorted().mapToObj(Integer::valueOf).collect(Collectors.toList());
+        List<Integer> reserveList = Arrays.stream(lost).sorted().mapToObj(Integer::valueOf).collect(Collectors.toList());
         for (int i = 0; i < lost.length; i++) {
             lostList.remove((Object)lost[i]);
             reserveList.remove((Object)lost[i]);
         }
         Arrays.sort(lost);
         Arrays.sort(reserve);
-        answer = lostList.size();
+        answer = n - lostList.size();
 
         for (Integer lostStudent : lostList) {
             int before = lostStudent - 1;
